--- a/presentation.tex
+++ b/presentation.tex
@@ -11,6 +11,7 @@
 \usepackage{amssymb}
 \usepackage{multicol}
 \usepackage{multirow}
+\usepackage{setspace}
 \usepackage{algorithmic, algorithm}
 \newcommand\tab[1][5mm]{\hspace*{#1}}
 
@@ -53,7 +54,19 @@ Coordinator: Conf. Dr. M\u ad\u alina Era\c scu}
 \end{frame}
 
 \section{Introduction}
-\begin{frame}[t]{Introduction}
+\begin{frame}[plain,c]{Introduction}
+\setstretch{3} 
+\begin{itemize}
+    \item Motivation
+    \begin{itemize}
+        \item Improving verification rates of benchmark
+    \end{itemize}
+    \item Problem specification
+    \begin{itemize}
+        \item Self-driving
+        \item Neural networks tool verifiers versus real life testing
+    \end{itemize}
+\end{itemize}
 \end{frame}
 \section{Dataset description}
 \begin{frame}[plain,c]{Dataset description}
@@ -64,13 +77,28 @@ Coordinator: Conf. Dr. M\u ad\u alina Era\c scu}
 \end{figure}
 \end{frame}
 \begin{frame}[plain,c]{Dataset description}
-Properties file name explained here.
+\begin{figure}[h]
+\centering
+\includegraphics[scale=0.8]{figure3.png}
+\caption{Properties file used for verification}
+\end{figure}
 \end{frame}
 
 \section{Tools}
 \begin{frame}[plain,c]{Tools}
+\setstretch{3} 
 \begin{itemize}
     \item alpha-beta-CROWN
+    \begin{figure}[h]
+    \centering
+    \includegraphics[scale=0.17]{figure4.png}
+    \caption{Rough explanation of efficient linear bound propagation}
+    \end{figure}
+\end{itemize}
+\end{frame}
+\begin{frame}[plain,c]{Tools}
+\setstretch{3} 
+\begin{itemize}
     \item Marabou
 \end{itemize}
 \end{frame}
@@ -84,7 +112,9 @@ Properties file name explained here.
  \hline
  1 & alpha-beta-CROWN & 0 & 39 & 3\\
  \hline
- 2 & Marabou\\
+ 2 & Marabou & - & - & -\\
+ \hline
+ 3 & Nnenum & 0 & 0 & 46\\
  \hline
 \end{tabular}
 \end{center}
@@ -92,6 +122,10 @@ Properties file name explained here.
 
 \section{Conclusion}
 \begin{frame}[plain,c]{Conclusion}
-\Large{Image verification is hard!}
+\setstretch{3} 
+\begin{itemize}
+    \item Posibility of verification improvement exists.
+    \item Image verification is hard!
+\end{itemize}
 \end{frame}
 \end{document} 
