Add demo to presentation

--- a/presentation.tex
+++ b/presentation.tex
@@ -128,4 +128,15 @@ Coordinator: Conf. Dr. M\u ad\u alina Era\c scu}
     \item Image verification is hard!
 \end{itemize}
 \end{frame}
+
+\section{Demo}
+\begin{frame}[plain,c]{Demo}
+\setstretch{3} 
+\begin{itemize}
+    \item alpha-beta-CROWN\\
+    \url{https://www.youtube.com/watch?v=cXHRKEpAh78}
+    \item Marabou \& Nnenum\\
+    \url{https://www.youtube.com/watch?v=YZIZdvPJcC8}
+\end{itemize}
+\end{frame}
 \end{document} 
