Add github link

--- a/presentation.tex
+++ b/presentation.tex
@@ -137,6 +137,8 @@ Coordinator: Conf. Dr. M\u ad\u alina Era\c scu}
     \url{https://www.youtube.com/watch?v=cXHRKEpAh78}
     \item Marabou \& Nnenum\\
     \url{https://www.youtube.com/watch?v=YZIZdvPJcC8}
+    \item Github link of the project\\
+    \url{https://github.com/RafaelBan/VFProject}
 \end{itemize}
 \end{frame}
 \end{document} 
